--- a/.github/workflows/push-cf.yml
+++ b/.github/workflows/push-cf.yml
@@ -35,13 +35,13 @@ jobs:
         run: |
           ibmcloud target -r"$IBM_CLOUD_REGION"
         shell: bash
+      - name: Log into IBM Cloud
+        run: |
+          ibmcloud login --apikey "$IBM_CLOUD_API" -g "$IBM_CLOUD_GROUP"
+        shell: bash
       - name: Target Group
         run: |
           ibmcloud target -g "$IBM_CLOUD_GROUP"
-        shell: bash
-      - name: Log into IBM Cloud
-        run: |
-          ibmcloud login --apikey "$IBM_CLOUD_API" -r "$IBM_CLOUD_REGION" -g "$IBM_CLOUD_GROUP"
         shell: bash
       - name: Target CF
         run: ibmcloud target --cf-api https://api.$IBM_CLOUD_REGION.cf.cloud.ibm.com -r $IBM_CLOUD_REGION -o $IBM_CLOUD_ORG -s $IBM_CLOUD_SPACE
