--- a/.github/workflows/push-cf.yml
+++ b/.github/workflows/push-cf.yml
@@ -33,7 +33,7 @@ jobs:
         shell: bash
       - name: Log into IBM Cloud
         run: |
-          ibmcloud target -a 'https://cloud.ibm.com' -r "$IBM_CLOUD_REGION"
+          ibmcloud target -a https://cloud.ibm.com -r "$IBM_CLOUD_REGION"
           ibmcloud login --apikey "$IBM_CLOUD_API" -r "$IBM_CLOUD_REGION" -g "$IBM_CLOUD_GROUP"
           ibmcloud target -r "$IBM_CLOUD_REGION"
           ibmcloud target -g "$IBM_CLOUD_GROUP"
