--- a/.github/workflows/push-cf.yml
+++ b/.github/workflows/push-cf.yml
@@ -33,10 +33,7 @@ jobs:
         shell: bash
       - name: Log into IBM Cloud
         run: |
-          ibmcloud login -a https://cloud.ibm.com -r "$IBM_CLOUD_REGION"
-          ibmcloud login --apikey "$IBM_CLOUD_API" -r "$IBM_CLOUD_REGION" -g "$IBM_CLOUD_GROUP"
-          ibmcloud target -r "$IBM_CLOUD_REGION"
-          ibmcloud target -g "$IBM_CLOUD_GROUP"
+          ibmcloud login --apikey "$IBM_CLOUD_API" --no -o "$IBM_CLOUD_ORG" -s $IBM_CLOUD_SPACE
         shell: bash
       - name: Target CF
         run: ibmcloud target --cf-api https://api.$IBM_CLOUD_REGION.cf.cloud.ibm.com -r $IBM_CLOUD_REGION -o $IBM_CLOUD_ORG -s $IBM_CLOUD_SPACE
