--- a/.github/workflows/push-cf.yml
+++ b/.github/workflows/push-cf.yml
@@ -33,7 +33,9 @@ jobs:
         shell: bash
       - name: Log into IBM Cloud
         run: |
-          ibmcloud login --apikey "$IBM_CLOUD_API" -g "$IBM_CLOUD_GROUP" -r "$IBM_CLOUD_REGION"
+          ibmcloud api https://cloud.ibm.com
+          ibmcloud login --apikey "$IBM_CLOUD_API"
+          ibmcloud target -g "$IBM_CLOUD_GROUP" -r "$IBM_CLOUD_REGION"
         shell: bash
       - name: Target CF
         run: ibmcloud target --cf-api https://api.$IBM_CLOUD_REGION.cf.cloud.ibm.com -r $IBM_CLOUD_REGION -o $IBM_CLOUD_ORG -s $IBM_CLOUD_SPACE
