--- a/.github/workflows/push-cf.yml
+++ b/.github/workflows/push-cf.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Log into IBM Cloud
         run: |
           ibmcloud api https://cloud.ibm.com
-          ibmcloud login --apikey "$IBM_CLOUD_API"
-          ibmcloud target -g "$IBM_CLOUD_GROUP" -r "$IBM_CLOUD_REGION"
+          ibmcloud login --apikey "$IBM_CLOUD_API" -r "$IBM_CLOUD_REGION"
+          ibmcloud target -g "$IBM_CLOUD_GROUP" -s "$IBM_CLOUD_SPACE"
         shell: bash
       - name: Target CF
         run: ibmcloud target --cf-api https://api.$IBM_CLOUD_REGION.cf.cloud.ibm.com -r $IBM_CLOUD_REGION -o $IBM_CLOUD_ORG -s $IBM_CLOUD_SPACE
