--- a/.github/workflows/push-cf.yml
+++ b/.github/workflows/push-cf.yml
@@ -10,7 +10,7 @@ env:
   IBM_CLOUD_REGION: us-south
   IBM_CLOUD_GROUP: Default
   IBM_CLOUD_SPACE: djangoserver-space
-  IBM_CLOUD_ORG: jairlanga@gmail.com
+  IBM_CLOUD_ORG: JQuinonesB
   MANIFEST_NAME: manifest.yml
   IBM_CLOUD_API: ${{secrets.CAPSTONE_PROJECT}}
 
